--- a/1-bi/challenges/linear-regression.multiple.ipynb
+++ b/1-bi/challenges/linear-regression.multiple.ipynb
@@ -3411,8 +3411,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-22T20:54:46.742892Z",
-     "start_time": "2025-07-22T20:54:46.735640Z"
+     "end_time": "2025-07-22T21:14:22.203102Z",
+     "start_time": "2025-07-22T21:14:22.194802Z"
     }
    },
    "cell_type": "code",
@@ -3420,15 +3420,15 @@
     "some_data = strat_test_set.iloc[:5]\n",
     "some_labels = housing_labels.iloc[:5]\n",
     "\n",
-    "some_data_prepared = prepare_predict(some_data, all_feature_names)\n",
+    "# some_data_prepared = prepare_predict(some_data, all_feature_names)\n",
+    "# housing_predictions = lin_reg.predict(some_data_prepared)\n",
     "\n",
-    "# df_prepared.head()\n",
-    "# some_data_prepared.shape\n",
-    "# some_data_prepared.head()\n",
-    "# some_data_prepared.info()\n",
-    "# predictions = lin_reg.predict(housing_prepared)\n",
+    "X_test_prepared = prepare_predict(strat_test_set, all_feature_names)\n",
+    "test_real = strat_test_set[\"median_house_value\"]\n",
     "\n",
-    "print(\"Predictions:\", lin_reg.predict(some_data_prepared))"
+    "test_pred = lin_reg.predict(X_test_prepared)\n",
+    "\n",
+    "print(\"Predictions:\", housing_predictions)"
    ],
    "id": "2decd274727de19b",
    "outputs": [
@@ -3441,7 +3441,7 @@
      ]
     }
    ],
-   "execution_count": 296
+   "execution_count": 310
   },
   {
    "metadata": {
@@ -3632,6 +3632,101 @@
     }
    ],
    "execution_count": 299
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Avaliando o modelo ✅",
+   "id": "1978d7e626ed1165"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-22T21:14:55.179687Z",
+     "start_time": "2025-07-22T21:14:55.176145Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "# erro médio quadrático eleva ao quadrado a média do erro médio absoluto. Estou avaliando se os erros não são tão grandes, esses erros são penalizados.\n",
+    "# penaliza muito mais valores distantes da média.\n",
+    "\n",
+    "# housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(test_real, test_pred)\n",
+    "lin_rmse = np.sqrt(lin_mse) # raiz quadrada aqui\n",
+    "lin_rmse"
+   ],
+   "id": "1d367fc62b471b97",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(67741.00346930603)"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 313
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-22T21:14:41.563741Z",
+     "start_time": "2025-07-22T21:14:41.560058Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "lin_mae = mean_absolute_error(test_real, test_pred)\n",
+    "lin_mae"
+   ],
+   "id": "a0a923fd73634966",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49469.75017490337"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 312
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-22T21:14:29.397209Z",
+     "start_time": "2025-07-22T21:14:29.393758Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# r2 = r2_score(some_labels, housing_predictions)\n",
+    "r2 = r2_score(test_real, test_pred)\n",
+    "print('r²',r2)"
+   ],
+   "id": "d55d06485a91dd9c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r² 0.6549702157402784\n"
+     ]
+    }
+   ],
+   "execution_count": 311
   }
  ],
  "metadata": {
