--- a/1-bi/my-code/1-naive-bayes/challenge-1.ipynb
+++ b/1-bi/my-code/1-naive-bayes/challenge-1.ipynb
@@ -7,6 +7,16 @@
    "id": "5d88fb5a91175bdb"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Aula 4 - 1º semestre - IA Generativa\n",
+    "\n",
+    "https://on.fiap.com.br/mod/conteudoshtml/view.php?id=494042&c=13347&sesskey=JCCuAH7XlU"
+   ],
+   "id": "98b44ef12b47a406"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-17T20:10:07.199130Z",
