--- a/1-bi/my-code/2-linear-regression/study/linear-regression.multiple.ipynb
+++ b/1-bi/my-code/2-linear-regression/study/linear-regression.multiple.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "dataset = pd.read_csv(\"../linear-regression/CURSO_IA_ML/Aula 2/housing.csv\")\n",
+    "dataset = pd.read_csv(\"../../../ml-basico/CURSO_IA_ML/Aula 2/housing.csv\")\n",
     "dataset.head()\n",
     "# dataset.info()"
    ],
@@ -2538,7 +2538,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "df_pipe = pd.read_csv(\"../linear-regression/CURSO_IA_ML/Aula 2/housing.csv\")\n",
+    "df_pipe = pd.read_csv(\"../../../ml-basico/CURSO_IA_ML/Aula 2/housing.csv\")\n",
     "# df_pipe.head()\n",
     "# df_pipe.shape"
    ],
